add LocalizationDatasetGenerator and its App&Main